syntax = "proto3";

package netsvr.totalUniqIdsResp;

option go_package = "internal/protocol;protocol";

//worker响应business，返回网关中全部的uniqId
message TotalUniqIdsResp {
  //worker原样回传给business
  bytes ctxData = 1;
  //包含的uniqId
  repeated string uniqIds = 3;
}